# amila

./: .env.example  .gitignore  README.md  docker-compose.minimal.yml  docker-compose.yml  docker-start.cmd  otel-collector-config.yaml  prometheus.yml  run-tests.ps1  start-dev.ps1  start.ps1  start.sh
backend/: .env.example  Dockerfile  README.md  check_health.py  docker-entrypoint.sh  langfuse_smoke.py  main.py  pyproject.toml
backend/app/agents/: __init__.py  sql_generation_skills.py
backend/app/api/: docs.py
backend/app/core/: application.py  audit.py  auth.py  celery_app.py  celery_fallback.py  checkpoint_fallback.py  client_registry.py  config.py  config_manager.py  cron_utils.py  db_timeout_retry.py  degraded_mode_manager.py  doris_client.py  doris_server.py  encryption.py  error_handler.py  error_normalizer.py  exceptions.py  graphiti_client.py  initializers.py  langfuse_client.py  langgraph_checkpointer_fallback.py  lifespan.py  llm_error_handler.py  logging_config.py  logging_middleware.py  mcp_client.py  mcp_resilient.py  observability.py  postgres_client.py  prometheus_metrics.py  rate_limited_logger.py  rate_limiter.py  rbac.py  redis_client.py  redis_resilient.py  resilience.py  security_middleware.py  session_id_generator.py  session_manager.py  (+5 more)
backend/app/db/: audit_tables_schema.sql  persistent_memory_schema.sql  query_corrections_schema.sql
backend/app/middleware/: __init__.py  csrf_middleware.py  llm_middleware.py
backend/app/models/: intent_models.py  internal_models.py  user.py
backend/app/orchestrator/: __init__.py  execution_tracker.py  graph.py  llm_config.py  processor.py  routing.py  state.py  utils.py
backend/app/services/: __init__.py  ad_group_mapping_service.py  adaptive_hitl_service.py  alert_escalation_service.py  alert_service.py  anomaly_detection_service.py  approval_service.py  audit_immutability_service.py  connection_manager.py  context_manager_service.py  conversation_router.py  cost_forecasting_service.py  custom_metrics_service.py  dashboard_generator.py  data_masking_service.py  data_quality_service.py  database_router.py  diagnostic_service.py  doris_query_service.py  doris_schema_service.py  error_reporter_service.py  execution_service.py  forecasting_service.py  insight_service.py  insights_service.py  introspection_service.py  ldap_integration_service.py  metadata_qa_service.py  metrics_layer_service.py  multi_query_decomposition_service.py  narrative_service.py  native_audit_service.py  notification_service.py  persistent_memory_service.py  postgres_query_service.py  postgres_schema_service.py  qlik_service.py  query_corrections_service.py  query_cost_estimator.py  query_cost_tracker.py  (+38 more)
backend/app/skills/: doris_query_skills.yaml  oracle_query_skills.yaml  postgres_query_skills.yaml  schema_mapping_skills.yaml  table_specific_examples.yaml
backend/app/tasks/: alert_tasks.py  checkpoint_cleanup.py  graphiti_cleanup.py  insight_scheduler.py  query_tasks.py  (+3 more)
backend/docs/: API_INTEGRATIONS.md  LANGFUSE_SETUP.md  README.md  SKILLS_ARCHITECTURE.md
backend/scripts/: apply_audit_ddl.py  create_audit_log.sql  setup_doris_local.py  verify_langfuse.py  verify_schema_unification.py
backend/tests/: __init__.py  conftest.py  test_api_integration.py  test_api_minimal_integration.py  test_backend_startup.py  test_dashboard_generator.py  test_degraded_mode.py  test_doris_integration_contracts.py  test_environment_profiles.py  test_graphiti_connection.py  test_graphiti_direct.py  test_graphiti_integration_pytest.py  test_hmac_signing.py  test_import.py  test_langfuse_integration.py  test_ldap_verification.py  test_orchestrator_api.py  test_orchestrator_endpoint.py  test_phase2_integration.py  test_postgres_integration.py  test_postgres_security.py  test_qlik_integration.py  test_redis_resilient.py  test_role_approval.py  test_schema_enrichment.py  test_semantic_layer.py  test_sql_enhancements.py  test_sse_streaming.py  test_structured_logging.py  test_superset_integration.py  test_system_integration.py  test_temporal_graph.py  verify_doris.py
(+210 files in other folders)
