[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bi-agent-mvp-backend"
description = "Amila backend for natural language database querying"
authors = [
    {name = "BI Agent Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core API Framework (PINNED for security)
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    # Data Validation & Models
    "pydantic>=2.11.5",
    "pydantic-settings==2.7.1",
    # MCP Client Integration
    "mcp==1.14.0",
    # LangGraph & AI Framework (updated after CopilotKit removal)
    "langgraph>=0.6.10",
    "langgraph-prebuilt>=0.6.4",
    "langchain==0.3.16",
    "langchain-aws==0.2.13",
    "langchain-google-genai==2.0.8",
    "langchain-core>=0.3.32,<0.4.0",
    "langgraph-checkpoint>=2.0.15",
    "langgraph-checkpoint-sqlite==2.0.6",
    # Authentication & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    # Database & Session Management
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    # Redis Cache & Session Storage (PINNED)
    "redis==5.2.1",
    "redis-om==0.3.3",
    # Task Queue (PINNED)
    "celery==5.4.0",
    "flower==2.0.1",
    # OpenTelemetry Observability
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-exporter-otlp==1.21.0",
    "opentelemetry-instrumentation-fastapi==0.42b0",
    "opentelemetry-instrumentation-httpx==0.42b0",
    "opentelemetry-instrumentation-logging==0.42b0",
    # Structured Logging
    "structlog==23.2.0",
    "python-json-logger==2.0.7",
    # HTTP Client & WebSocket Support (PINNED)
    "httpx==0.28.1",
    "websockets==14.1",
    # AWS Bedrock Integration
    "boto3==1.35.94",
    "botocore==1.35.94",
    # Graphiti Integration (Temporal Knowledge Graph)
    "graphiti-core[falkordb,google-genai]==0.21.0",
    # Langfuse Observability & Tracing
    "langfuse>=2.0.0",
    # Utility Libraries (PINNED)
    "python-dotenv==1.0.1",
    "orjson==3.10.14",
    "aiosqlite==0.21.0",
    # Python Visualization
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    # Skills YAML support
    "pyyaml>=6.0",
    # SQL Dialect Conversion (Oracle/Doris transpilation)
    "sqlglot>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.11.0",
    "isort==5.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.11.0",
    "isort==5.12.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
]

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | logs
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tests/",
    ".venv/",
    "logs/",
    ".doris-mcp-server/",
]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".venv",
    "logs",
    ".doris-mcp-server",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
